# people-display

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  build.rs  display.Dockerfile  exporter.Dockerfile  flake.nix  rust-toolchain.toml  tag.sh
.github/workflows/: display-docker.yaml  exporter-docker.yaml
case/: display.f3d  display.stl
clock_pb/: Cargo.toml
display/: Cargo.toml  Dockerfile
display-deploy/: copy_files.sh  dietpi-wifi.txt.sh  dietpi.txt.sh  post_install.sh  preseed.sh  wireguard.service
display-deploy/files/: docker-compose.service  docker-compose.yaml
display/src/: config.rs  main.rs  snapshot_manager.rs  tile.rs
exporter/: Cargo.toml  Dockerfile
exporter/src/: clock_service.rs  config.rs  homeassistant.rs  homeassistant_types.rs  main.rs  photo_manager.rs  web_ui.rs
lib/: Cargo.toml  build.rs  clock.proto  env_params.rs  lib.rs  password.rs
lib/clock_pb/: clock.proto
lib/lib/: clock.proto  clock_pb.rs  env_params.rs  lib.rs
proto/: clock.proto
src/: main.rs
src/display/: config.rs  main.rs  snapshot_manager.rs  tile.rs
src/exporter/: clock_service.rs  config.rs  homeassistant.rs  homeassistant_types.rs  main.rs  photo_manager.rs
src/server/: clock_service.rs  config.rs  homeassistant.rs  main.rs
