[package]
name = "clock"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "lib/lib.rs"

[[bin]]
name = "display"
path = "src/display/main.rs"

[[bin]]
name = "exporter"
path = "src/exporter/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json"]}
tonic = "0.9.2"
prost = "0.11"
log = "0.4.19"
env_logger = "0.10.0"
sdl2 = { version = "0.35.2", features = ["image"] }

[build-dependencies]
tonic-build = "0.9.2"
