[package]
name = "clock-display"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "display"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Need client-side TLS support for the display to connect to HTTPS endpoints.
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
prost = "0.11"
log = "0.4.19"
env_logger = "0.10.0"
sdl2 = { version = "0.35.2", features = ["image"] }
secstr = "0.5.1"
clock-lib = { path = "../lib" }
