[package]
name = "clock-display"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "display"
path = "src/main.rs"

[dependencies]
clock-lib = { path = "../lib" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Need client-side TLS support for the display to connect to HTTPS endpoints.
tonic = { version = "0.14", features = ["tls-aws-lc"] }
prost = "0.14"
log = "0.4"
env_logger = "0.10"
sdl2 = { version = "0.38", features = [
    "image",
    #"static-link",
    #"use-pkgconfig",
] }
secstr = "0.5"
