[package]
name = "exporter"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "exporter"
path = "src/main.rs"

[dependencies]
clock-lib = { path = "../lib" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
# Need client-side TLS support for the display to connect to HTTPS endpoints.
tonic = { version = "0.14", features = ["tls-aws-lc"] }
# TODO: Once https://github.com/aws/aws-lc-rs/pull/1071 committed, can bump the patch number.
aws-lc-rs = "1.16.2"
prost = "0.14"
log = "0.4"
env_logger = "0.11"
secstr = "0.5"
thiserror = "1"
url = "2"
anyhow = "1"
regex = "1"
