[package]
name = "clock-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "lib/lib.rs"

[dependencies]
# Need client-side TLS support for the display to connect to HTTPS endpoints.
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
prost = "0.11"
secstr = "0.5.1"

[build-dependencies]
tonic-build = "0.9.2"
